data/usersCode/ghdt/question1/error.txt
/home/rutuja/myenv/RC/data/usersCode/ghdt/question1/code1-10.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 yghjg
 ^~~~~
